# pg_print

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
src/: a_const.rs  a_expr.rs  a_star.rs  access_priv.rs  algorithm.rs  bool_expr.rs  col.rs  collate_clause.rs  column_def.rs  column_ref.rs  composite_type.rs  constraint.rs  conv.rs  convenience.rs  create_domain_stmt.rs  create_extension_stmt.rs  create_foreign_table_stmt.rs  create_function_stmt.rs  create_schema_stmt.rs  create_stmt.rs  create_table_as_stmt.rs  create_trig_stmt.rs  def_elem.rs  define_stmt.rs  deparse.rs  domain.rs  error.rs  execute_stmt.rs  expr.rs  function_parameter.rs  gram.rs  grant_stmt.rs  index_elem.rs  index_stmt.rs  integer.rs  interval_fields.rs  into_clause.rs  lib.rs  list.rs  name.rs  (+26 more)
src/algorithm/: convenience.rs  mod.rs  printer.rs  ring.rs  tree.rs
src/fmt/: alg.rs  algo.rs  algorithm.rs  context.rs  conv.rs  convenience.rs  gram.rs  mod.rs  print.rs  printer.rs  utils.rs
tests/: deparse_tests.rs  test_printers_prettification.rs  unparse.rs  unparse.sql  unparse_tests.rs  unparse_tests.sql
tests/snapshots/: unparse__09304f0ffe2eb58b.snap  unparse__09304f0ffe2eb58b.snap.new  unparse__2745941de09f7b46.snap  unparse__2745941de09f7b46.snap.new  unparse__3a3c956cf64da0c2.snap  unparse__56353d20c0d500a2.snap  unparse__666ef3bf1ed1b97e.snap  unparse__8c82d192cc581ad9.snap  unparse__9457a980c19d1eb8.snap  unparse__d16ed197a5240897.snap  unparse__e5008e2cb3b777a0.snap  unparse__tests_sql_ddl_create_table_sql@1.snap  unparse__tests_sql_ddl_grant_sql@1.snap  (+48 more)
(+10 files in other folders)
