[package]
name = "pg_print"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
codegen = { git = "https://github.com/supabase/postgres_lsp" }
parser = { git = "https://github.com/supabase/postgres_lsp" }
pg_query_proto_parser = { git = "https://github.com/supabase/postgres_lsp" }
pg_query = "0.8.2"

[dev-dependencies]
env_logger = "0.9.1"
insta = "1.34.0"
