[package]
name = "pg_print"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
parser = { git = "https://github.com/supabase/postgres_lsp", rev = "9c694d7", optional = true }
pg_query = "0.8.2"

[dev-dependencies]
insta = "1.34.0"

[features]
unstable = ["dep:parser"]
